bug fix + final version